syntax = "proto3";

message I32ArrayOps {
    repeated int32 data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    int32 sum = 3;
    int32 min = 4;
    int32 max = 5;
    float average = 6;
}

message I64ArrayOps {
    repeated int64 data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    int64 sum = 3;
    int64 min = 4;
    int64 max = 5;
    double average = 6;
}

message U32ArrayOps {
    repeated uint32 data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    uint32 sum = 3;
    uint32 min = 4;
    uint32 max = 5;
    float average = 6;
}

message U64ArrayOps {
    repeated uint64 data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    uint64 sum = 3;
    uint64 min = 4;
    uint64 max = 5;
    double average = 6;
}

message F32ArrayOps {
    repeated float data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    float sum = 3;
    float min = 4;
    float max = 5;
    float average = 6;
    bool has_nan = 7;
    bool has_infinity = 8;
}

message F64ArrayOps {
    repeated double data = 1 [(array_size) = 16777216];
    uint32 count = 2;
    double sum = 3;
    double min = 4;
    double max = 5;
    double average = 6;
    bool has_nan = 7;
    bool has_infinity = 8;
}

message BenchmarkResult {
    uint64 simd_time_ns = 1;
    uint64 scalar_time_ns = 2;
    float speedup_factor = 3;
    uint32 elements_processed = 4;
    string operation_name = 5 [(max_length) = 64];
}

message TestConfig {
    uint32 small_size = 1;
    uint32 medium_size = 2;
    uint32 large_size = 3;
    uint32 huge_size = 4;
    repeated uint32 unaligned_sizes = 5 [(array_size) = 16];
    uint32 unaligned_count = 6;
}
