syntax = "proto3";

enum SensorType {
    TEMPERATURE = 0;
    HUMIDITY = 1;
    PRESSURE = 2;
    LIGHT = 3;
    MOTION = 4;
    PROXIMITY = 5;
    ACCELEROMETER = 6;
    GYROSCOPE = 7;
}

enum DeviceStatus {
    ONLINE = 0;
    OFFLINE = 1;
    ERROR = 2;
    MAINTENANCE = 3;
}

message SensorReading {
    option (proto2ffi.pool_size) = 50000;
    option (proto2ffi.simd) = true;

    uint64 device_id = 1;
    uint64 timestamp_us = 2;
    SensorType sensor_type = 3;
    float value = 4;
    uint32 quality = 5;
}

message DeviceTelemetry {
    option (proto2ffi.pool_size) = 10000;

    uint64 device_id = 1;
    uint64 timestamp_us = 2;
    uint32 battery_level = 3;
    float temperature = 4;
    uint32 signal_strength = 5;
    uint32 memory_usage = 6;
    uint32 cpu_usage = 7;
    DeviceStatus status = 8;
}

message TimeSeriesData {
    option (proto2ffi.pool_size) = 1000;

    uint64 device_id = 1;
    SensorType sensor_type = 2;
    repeated uint64 timestamps = 3 [(proto2ffi.max_count) = 1000];
    repeated float values = 4 [(proto2ffi.max_count) = 1000];
    uint32 count = 5;
}

message AggregatedMetrics {
    option (proto2ffi.simd) = true;

    uint64 device_id = 1;
    uint64 start_time_us = 2;
    uint64 end_time_us = 3;
    float min_value = 4;
    float max_value = 5;
    float avg_value = 6;
    float stddev = 7;
    uint32 sample_count = 8;
}

message DeviceGroup {
    option (proto2ffi.pool_size) = 1000;

    uint32 group_id = 1;
    string group_name = 2 [(proto2ffi.max_length) = 64];
    repeated uint64 device_ids = 3 [(proto2ffi.max_count) = 256];
    uint32 device_count = 4;
}

message EventStream {
    option (proto2ffi.pool_size) = 5000;

    uint64 event_id = 1;
    uint64 timestamp_us = 2;
    uint64 device_id = 3;
    uint32 event_type = 4;
    string payload = 5 [(proto2ffi.max_length) = 256];
}

message SystemStats {
    option (proto2ffi.simd) = true;

    uint64 total_devices = 1;
    uint64 online_devices = 2;
    uint64 total_readings = 3;
    uint32 readings_per_second = 4;
    uint64 bytes_processed = 5;
    float average_latency_ms = 6;
}
