syntax = "proto3";

package ultra_complex;

enum PriorityLevel {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_CRITICAL = 1;
  PRIORITY_HIGH = 2;
  PRIORITY_MEDIUM = 3;
  PRIORITY_LOW = 4;
  PRIORITY_TRIVIAL = 5;
}

enum ProcessingState {
  STATE_UNSPECIFIED = 0;
  STATE_PENDING = 1;
  STATE_IN_PROGRESS = 2;
  STATE_PAUSED = 3;
  STATE_COMPLETED = 4;
  STATE_FAILED = 5;
  STATE_CANCELLED = 6;
  STATE_RETRYING = 7;
  STATE_VALIDATING = 8;
  STATE_APPROVED = 9;
  STATE_REJECTED = 10;
}

enum DataType {
  DATA_TYPE_UNSPECIFIED = 0;
  DATA_TYPE_INTEGER = 1;
  DATA_TYPE_FLOAT = 2;
  DATA_TYPE_DOUBLE = 3;
  DATA_TYPE_STRING = 4;
  DATA_TYPE_BOOLEAN = 5;
  DATA_TYPE_BYTES = 6;
  DATA_TYPE_TIMESTAMP = 7;
  DATA_TYPE_UUID = 8;
  DATA_TYPE_JSON = 9;
  DATA_TYPE_XML = 10;
  DATA_TYPE_BINARY = 11;
  DATA_TYPE_COMPRESSED = 12;
  DATA_TYPE_ENCRYPTED = 13;
  DATA_TYPE_SIGNED = 14;
  DATA_TYPE_HASH = 15;
}

enum ErrorCode {
  ERROR_NONE = 0;
  ERROR_UNKNOWN = 1;
  ERROR_INVALID_INPUT = 2;
  ERROR_INVALID_STATE = 3;
  ERROR_TIMEOUT = 4;
  ERROR_NETWORK = 5;
  ERROR_IO = 6;
  ERROR_PERMISSION_DENIED = 7;
  ERROR_NOT_FOUND = 8;
  ERROR_ALREADY_EXISTS = 9;
  ERROR_RESOURCE_EXHAUSTED = 10;
  ERROR_OUT_OF_MEMORY = 11;
  ERROR_INVALID_ARGUMENT = 12;
  ERROR_UNIMPLEMENTED = 13;
  ERROR_INTERNAL = 14;
  ERROR_UNAVAILABLE = 15;
  ERROR_DATA_LOSS = 16;
  ERROR_UNAUTHENTICATED = 17;
  ERROR_RATE_LIMIT = 18;
  ERROR_QUOTA_EXCEEDED = 19;
  ERROR_DEPENDENCY_FAILED = 20;
  ERROR_VALIDATION_FAILED = 21;
  ERROR_SERIALIZATION_FAILED = 22;
  ERROR_DESERIALIZATION_FAILED = 23;
  ERROR_CORRUPTION = 24;
  ERROR_VERSION_MISMATCH = 25;
  ERROR_DEADLOCK = 26;
  ERROR_RACE_CONDITION = 27;
  ERROR_INVARIANT_VIOLATION = 28;
  ERROR_ASSERTION_FAILED = 29;
  ERROR_OVERFLOW = 30;
  ERROR_UNDERFLOW = 31;
  ERROR_DIVISION_BY_ZERO = 32;
  ERROR_PARSE_ERROR = 33;
  ERROR_COMPILATION_ERROR = 34;
  ERROR_RUNTIME_ERROR = 35;
  ERROR_LOGIC_ERROR = 36;
  ERROR_CONFIGURATION_ERROR = 37;
  ERROR_COMPATIBILITY_ERROR = 38;
  ERROR_SECURITY_ERROR = 39;
  ERROR_CHECKSUM_MISMATCH = 40;
}

enum NetworkProtocol {
  PROTOCOL_UNSPECIFIED = 0;
  PROTOCOL_TCP = 1;
  PROTOCOL_UDP = 2;
  PROTOCOL_HTTP = 3;
  PROTOCOL_HTTPS = 4;
  PROTOCOL_WEBSOCKET = 5;
  PROTOCOL_GRPC = 6;
  PROTOCOL_MQTT = 7;
  PROTOCOL_AMQP = 8;
  PROTOCOL_KAFKA = 9;
  PROTOCOL_REDIS = 10;
  PROTOCOL_MEMCACHED = 11;
  PROTOCOL_POSTGRESQL = 12;
  PROTOCOL_MYSQL = 13;
  PROTOCOL_MONGODB = 14;
  PROTOCOL_CASSANDRA = 15;
  PROTOCOL_ELASTICSEARCH = 16;
  PROTOCOL_S3 = 17;
  PROTOCOL_FTP = 18;
  PROTOCOL_SFTP = 19;
  PROTOCOL_SSH = 20;
}

enum CompressionAlgorithm {
  COMPRESSION_NONE = 0;
  COMPRESSION_GZIP = 1;
  COMPRESSION_ZLIB = 2;
  COMPRESSION_BROTLI = 3;
  COMPRESSION_LZ4 = 4;
  COMPRESSION_ZSTD = 5;
  COMPRESSION_SNAPPY = 6;
  COMPRESSION_DEFLATE = 7;
  COMPRESSION_BZ2 = 8;
  COMPRESSION_XZ = 9;
  COMPRESSION_LZMA = 10;
}

enum EncryptionAlgorithm {
  ENCRYPTION_NONE = 0;
  ENCRYPTION_AES_128 = 1;
  ENCRYPTION_AES_192 = 2;
  ENCRYPTION_AES_256 = 3;
  ENCRYPTION_RSA_1024 = 4;
  ENCRYPTION_RSA_2048 = 5;
  ENCRYPTION_RSA_4096 = 6;
  ENCRYPTION_CHACHA20 = 7;
  ENCRYPTION_SALSA20 = 8;
  ENCRYPTION_TWOFISH = 9;
  ENCRYPTION_BLOWFISH = 10;
  ENCRYPTION_3DES = 11;
  ENCRYPTION_CAMELLIA = 12;
}

enum HashAlgorithm {
  HASH_NONE = 0;
  HASH_MD5 = 1;
  HASH_SHA1 = 2;
  HASH_SHA224 = 3;
  HASH_SHA256 = 4;
  HASH_SHA384 = 5;
  HASH_SHA512 = 6;
  HASH_SHA3_224 = 7;
  HASH_SHA3_256 = 8;
  HASH_SHA3_384 = 9;
  HASH_SHA3_512 = 10;
  HASH_BLAKE2B = 11;
  HASH_BLAKE2S = 12;
  HASH_BLAKE3 = 13;
  HASH_WHIRLPOOL = 14;
  HASH_RIPEMD160 = 15;
  HASH_CRC32 = 16;
  HASH_CRC64 = 17;
  HASH_XXHASH = 18;
  HASH_MURMUR3 = 19;
  HASH_CITYHASH = 20;
}

enum CachePolicy {
  CACHE_NONE = 0;
  CACHE_READ_THROUGH = 1;
  CACHE_WRITE_THROUGH = 2;
  CACHE_WRITE_BEHIND = 3;
  CACHE_WRITE_AROUND = 4;
  CACHE_REFRESH_AHEAD = 5;
  CACHE_LRU = 6;
  CACHE_LFU = 7;
  CACHE_FIFO = 8;
  CACHE_RANDOM = 9;
  CACHE_TTL = 10;
  CACHE_TTI = 11;
  CACHE_ADAPTIVE = 12;
}

enum ConsistencyLevel {
  CONSISTENCY_EVENTUAL = 0;
  CONSISTENCY_STRONG = 1;
  CONSISTENCY_CAUSAL = 2;
  CONSISTENCY_SEQUENTIAL = 3;
  CONSISTENCY_LINEARIZABLE = 4;
  CONSISTENCY_QUORUM = 5;
  CONSISTENCY_ONE = 6;
  CONSISTENCY_TWO = 7;
  CONSISTENCY_THREE = 8;
  CONSISTENCY_ALL = 9;
  CONSISTENCY_LOCAL_QUORUM = 10;
  CONSISTENCY_EACH_QUORUM = 11;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

message UUID {
  uint64 high = 1;
  uint64 low = 2;
}

message Version {
  uint32 major = 1;
  uint32 minor = 2;
  uint32 patch = 3;
  string pre_release = 4;
  string build_metadata = 5;
}

message Point2D {
  option (proto2ffi.simd) = true;

  double x = 1;
  double y = 2;
}

message Point3D {
  option (proto2ffi.simd) = true;

  double x = 1;
  double y = 2;
  double z = 3;
}

message Point4D {
  option (proto2ffi.simd) = true;

  double x = 1;
  double y = 2;
  double z = 3;
  double w = 4;
}

message Vector2 {
  option (proto2ffi.simd) = true;

  float x = 1;
  float y = 2;
}

message Vector3 {
  option (proto2ffi.simd) = true;

  float x = 1;
  float y = 2;
  float z = 3;
}

message Vector4 {
  option (proto2ffi.simd) = true;

  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Matrix2x2 {
  option (proto2ffi.simd) = true;

  float m00 = 1;
  float m01 = 2;
  float m10 = 3;
  float m11 = 4;
}

message Matrix3x3 {
  option (proto2ffi.simd) = true;

  float m00 = 1;
  float m01 = 2;
  float m02 = 3;
  float m10 = 4;
  float m11 = 5;
  float m12 = 6;
  float m20 = 7;
  float m21 = 8;
  float m22 = 9;
}

message Matrix4x4 {
  option (proto2ffi.simd) = true;

  float m00 = 1;
  float m01 = 2;
  float m02 = 3;
  float m03 = 4;
  float m10 = 5;
  float m11 = 6;
  float m12 = 7;
  float m13 = 8;
  float m20 = 9;
  float m21 = 10;
  float m22 = 11;
  float m23 = 12;
  float m30 = 13;
  float m31 = 14;
  float m32 = 15;
  float m33 = 16;
}

message Quaternion {
  option (proto2ffi.simd) = true;

  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

message Color {
  option (proto2ffi.simd) = true;

  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
}

message BoundingBox {
  Point3D min = 1;
  Point3D max = 2;
}

message Sphere {
  Point3D center = 1;
  double radius = 2;
}

message Plane {
  Vector3 normal = 1;
  float distance = 2;
}

message Ray {
  Point3D origin = 1;
  Vector3 direction = 2;
}

message Transform {
  Vector3 position = 1;
  Quaternion rotation = 2;
  Vector3 scale = 3;
}

message Statistics {
  uint64 count = 1;
  double sum = 2;
  double min = 3;
  double max = 4;
  double mean = 5;
  double variance = 6;
  double std_dev = 7;
  double median = 8;
  double q1 = 9;
  double q3 = 10;
  double iqr = 11;
  double skewness = 12;
  double kurtosis = 13;
}

message Histogram {
  repeated double bins = 1;
  repeated uint64 counts = 2;
  double min = 3;
  double max = 4;
  uint32 num_bins = 5;
}

message TimeSeries {
  repeated Timestamp timestamps = 1;
  repeated double values = 2;
  string name = 3;
  string unit = 4;
}

message GraphNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  string label = 2;
  repeated uint64 outgoing_edges = 3;
  repeated uint64 incoming_edges = 4;
  bytes metadata = 5;
  double weight = 6;
  bool visited = 7;
  int32 color = 8;
  int32 distance = 9;
  uint64 parent = 10;
}

message GraphEdge {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  uint64 source = 2;
  uint64 target = 3;
  double weight = 4;
  string label = 5;
  bool directed = 6;
  bytes metadata = 7;
}

message Graph {
  option (proto2ffi.pooled) = true;

  repeated GraphNode nodes = 1;
  repeated GraphEdge edges = 2;
  bool directed = 3;
  bool weighted = 4;
  uint32 num_nodes = 5;
  uint32 num_edges = 6;
  string name = 7;
}

message TreeNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  string label = 2;
  uint64 parent_id = 3;
  repeated uint64 child_ids = 4;
  bytes data = 5;
  int32 depth = 6;
  int32 height = 7;
  double value = 8;
  bool is_leaf = 9;
}

message BinaryTreeNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  int64 value = 2;
  uint64 left_id = 3;
  uint64 right_id = 4;
  uint64 parent_id = 5;
  int32 height = 6;
  int32 balance_factor = 7;
  Color color_rb = 8;
}

message HeapNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  double priority = 2;
  bytes data = 3;
  uint64 parent_index = 4;
  uint64 left_child_index = 5;
  uint64 right_child_index = 6;
}

message HashTableEntry {
  option (proto2ffi.pooled) = true;

  uint64 hash = 1;
  string key = 2;
  bytes value = 3;
  uint64 next_id = 4;
  bool occupied = 5;
  uint32 probe_count = 6;
}

message HashTable {
  option (proto2ffi.pooled) = true;

  repeated HashTableEntry buckets = 1;
  uint32 size = 2;
  uint32 capacity = 3;
  double load_factor = 4;
  HashAlgorithm hash_algorithm = 5;
  uint32 collision_count = 6;
}

message TrieNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  bytes character = 2;
  bool is_end_of_word = 3;
  repeated uint64 child_ids = 4;
  string word = 5;
  uint32 frequency = 6;
}

message BloomFilter {
  bytes bit_array = 1;
  uint32 size = 2;
  uint32 num_hash_functions = 3;
  uint64 num_items = 4;
  double false_positive_rate = 5;
}

message SkipListNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  int64 key = 2;
  bytes value = 3;
  repeated uint64 forward_ids = 4;
  uint32 level = 5;
}

message KdTreeNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  Point3D point = 2;
  uint64 left_id = 3;
  uint64 right_id = 4;
  uint32 split_axis = 5;
  bytes data = 6;
}

message OctreeNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  BoundingBox bounds = 2;
  repeated uint64 child_ids = 3;
  repeated uint64 object_ids = 4;
  uint32 depth = 5;
  bool is_leaf = 6;
}

message QuadTreeNode {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  Point2D min = 2;
  Point2D max = 3;
  repeated uint64 child_ids = 4;
  repeated uint64 object_ids = 5;
  uint32 depth = 6;
  bool is_leaf = 7;
}

message RTreeEntry {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  BoundingBox mbr = 2;
  uint64 child_id = 3;
  bytes data = 4;
  bool is_leaf = 5;
}

message SpatialIndex {
  option (proto2ffi.pooled) = true;

  repeated RTreeEntry entries = 1;
  uint32 max_entries = 2;
  uint32 min_entries = 3;
  uint32 height = 4;
}

message Cache {
  option (proto2ffi.pooled) = true;

  repeated HashTableEntry entries = 1;
  uint32 capacity = 2;
  uint32 size = 3;
  CachePolicy policy = 4;
  uint64 hit_count = 5;
  uint64 miss_count = 6;
  uint64 eviction_count = 7;
}

message Database {
  option (proto2ffi.pooled) = true;

  string name = 1;
  repeated Table tables = 2;
  repeated Index indices = 3;
  Version version = 4;
  ConsistencyLevel consistency = 5;
  uint64 total_rows = 6;
  uint64 total_size_bytes = 7;
}

message Table {
  option (proto2ffi.pooled) = true;

  string name = 1;
  repeated Column columns = 2;
  repeated Row rows = 3;
  repeated Index indices = 4;
  uint64 num_rows = 5;
  uint64 size_bytes = 6;
}

message Column {
  string name = 1;
  DataType data_type = 2;
  bool nullable = 3;
  bool unique = 4;
  bool indexed = 5;
  string default_value = 6;
}

message Row {
  option (proto2ffi.pooled) = true;

  uint64 id = 1;
  repeated Cell cells = 2;
  Timestamp created_at = 3;
  Timestamp updated_at = 4;
  Version version = 5;
}

message Cell {
  string column_name = 1;
  bytes value = 2;
  DataType data_type = 3;
  bool is_null = 4;
}

message Index {
  option (proto2ffi.pooled) = true;

  string name = 1;
  repeated string column_names = 2;
  bool unique = 3;
  repeated IndexEntry entries = 4;
  uint64 size_bytes = 5;
}

message IndexEntry {
  option (proto2ffi.pooled) = true;

  bytes key = 1;
  repeated uint64 row_ids = 2;
}

message Transaction {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  repeated Operation operations = 2;
  ProcessingState state = 3;
  Timestamp started_at = 4;
  Timestamp committed_at = 5;
  ConsistencyLevel consistency = 6;
  int32 retry_count = 7;
}

message Operation {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  string table_name = 2;
  OperationType type = 3;
  bytes data = 4;
  Timestamp timestamp = 5;
}

enum OperationType {
  OPERATION_UNSPECIFIED = 0;
  OPERATION_INSERT = 1;
  OPERATION_UPDATE = 2;
  OPERATION_DELETE = 3;
  OPERATION_SELECT = 4;
  OPERATION_CREATE = 5;
  OPERATION_DROP = 6;
  OPERATION_ALTER = 7;
  OPERATION_TRUNCATE = 8;
}

message NetworkPacket {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  bytes source_address = 2;
  bytes destination_address = 3;
  uint32 source_port = 4;
  uint32 destination_port = 5;
  NetworkProtocol protocol = 6;
  bytes payload = 7;
  uint32 sequence_number = 8;
  uint32 acknowledgment_number = 9;
  Timestamp timestamp = 10;
  uint32 ttl = 11;
  bytes checksum = 12;
}

message NetworkConnection {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  bytes local_address = 2;
  bytes remote_address = 3;
  uint32 local_port = 4;
  uint32 remote_port = 5;
  NetworkProtocol protocol = 6;
  ProcessingState state = 7;
  uint64 bytes_sent = 8;
  uint64 bytes_received = 9;
  Timestamp established_at = 10;
  Timestamp last_activity = 11;
}

message HttpRequest {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  string method = 2;
  string url = 3;
  repeated Header headers = 4;
  bytes body = 5;
  Version version = 6;
  Timestamp timestamp = 7;
}

message HttpResponse {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  uint32 status_code = 2;
  string status_message = 3;
  repeated Header headers = 4;
  bytes body = 5;
  Version version = 6;
  Timestamp timestamp = 7;
}

message Header {
  string name = 1;
  string value = 2;
}

message FileMetadata {
  option (proto2ffi.pooled) = true;

  string path = 1;
  string name = 2;
  string extension = 3;
  uint64 size_bytes = 4;
  Timestamp created_at = 5;
  Timestamp modified_at = 6;
  Timestamp accessed_at = 7;
  uint32 permissions = 8;
  string owner = 9;
  string group = 10;
  bool is_directory = 11;
  bool is_symlink = 12;
  bytes checksum = 13;
  HashAlgorithm checksum_algorithm = 14;
}

message FileChunk {
  option (proto2ffi.pooled) = true;

  UUID file_id = 1;
  uint64 chunk_index = 2;
  uint64 offset = 3;
  bytes data = 4;
  uint32 size = 5;
  bytes checksum = 6;
  CompressionAlgorithm compression = 7;
  EncryptionAlgorithm encryption = 8;
}

message ImageMetadata {
  option (proto2ffi.pooled) = true;

  uint32 width = 1;
  uint32 height = 2;
  uint32 channels = 3;
  uint32 bits_per_channel = 4;
  string format = 5;
  string color_space = 6;
  bool has_alpha = 7;
  CompressionAlgorithm compression = 8;
  uint64 size_bytes = 9;
}

message Image {
  option (proto2ffi.pooled) = true;

  ImageMetadata metadata = 1;
  bytes data = 2;
  repeated ImageLayer layers = 3;
  Histogram histogram = 4;
}

message ImageLayer {
  option (proto2ffi.pooled) = true;

  string name = 1;
  uint32 width = 2;
  uint32 height = 3;
  bytes data = 4;
  double opacity = 5;
  string blend_mode = 6;
}

message AudioMetadata {
  uint32 sample_rate = 1;
  uint32 channels = 2;
  uint32 bits_per_sample = 3;
  string format = 4;
  uint64 num_samples = 5;
  double duration_seconds = 6;
  CompressionAlgorithm compression = 7;
}

message AudioSample {
  option (proto2ffi.pooled) = true;

  AudioMetadata metadata = 1;
  bytes data = 2;
  repeated double amplitudes = 3;
  repeated double frequencies = 4;
}

message VideoMetadata {
  uint32 width = 1;
  uint32 height = 2;
  double fps = 3;
  string codec = 4;
  uint64 num_frames = 5;
  double duration_seconds = 6;
  uint64 bitrate = 7;
  CompressionAlgorithm compression = 8;
}

message VideoFrame {
  option (proto2ffi.pooled) = true;

  uint64 frame_number = 1;
  Timestamp timestamp = 2;
  Image image = 3;
  bytes compressed_data = 4;
  bool is_keyframe = 5;
}

message MLModel {
  option (proto2ffi.pooled) = true;

  string name = 1;
  Version version = 2;
  string architecture = 3;
  repeated MLLayer layers = 4;
  repeated MLParameter parameters = 5;
  MLMetrics metrics = 6;
  bytes model_data = 7;
}

message MLLayer {
  option (proto2ffi.pooled) = true;

  string name = 1;
  string type = 2;
  repeated uint32 shape = 3;
  repeated double weights = 4;
  repeated double biases = 5;
  string activation = 6;
  uint32 num_parameters = 7;
}

message MLParameter {
  string name = 1;
  repeated double values = 2;
  repeated uint32 shape = 3;
  bool trainable = 4;
}

message MLMetrics {
  double accuracy = 1;
  double precision = 2;
  double recall = 3;
  double f1_score = 4;
  double loss = 5;
  repeated double confusion_matrix = 6;
}

message Tensor {
  option (proto2ffi.pooled) = true;

  repeated uint32 shape = 1;
  repeated double data = 2;
  DataType dtype = 3;
  string device = 4;
  bool requires_grad = 5;
}

message ComputeTask {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  string name = 2;
  PriorityLevel priority = 3;
  ProcessingState state = 4;
  repeated ComputeTask dependencies = 5;
  bytes input_data = 6;
  bytes output_data = 7;
  Timestamp created_at = 8;
  Timestamp started_at = 9;
  Timestamp completed_at = 10;
  double progress = 11;
  ErrorCode error_code = 12;
  string error_message = 13;
}

message WorkerNode {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  string hostname = 2;
  bytes ip_address = 3;
  uint32 port = 4;
  ProcessingState state = 5;
  uint32 num_cores = 6;
  uint64 memory_bytes = 7;
  uint64 available_memory_bytes = 8;
  double cpu_usage = 9;
  double memory_usage = 10;
  repeated ComputeTask tasks = 11;
}

message Cluster {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  string name = 2;
  repeated WorkerNode nodes = 3;
  repeated ComputeTask tasks = 4;
  ProcessingState state = 5;
  Statistics load_stats = 6;
}

message MessageQueue {
  option (proto2ffi.pooled) = true;

  string name = 1;
  repeated QueueMessage messages = 2;
  uint32 max_size = 3;
  uint32 current_size = 4;
  uint64 total_enqueued = 5;
  uint64 total_dequeued = 6;
  PriorityLevel min_priority = 7;
}

message QueueMessage {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  bytes payload = 2;
  PriorityLevel priority = 3;
  Timestamp timestamp = 4;
  uint32 retry_count = 5;
  Timestamp expiry = 6;
}

message EventLog {
  option (proto2ffi.pooled) = true;

  repeated LogEntry entries = 1;
  uint64 total_entries = 2;
  Timestamp first_entry = 3;
  Timestamp last_entry = 4;
}

message LogEntry {
  option (proto2ffi.pooled) = true;

  UUID id = 1;
  Timestamp timestamp = 2;
  LogLevel level = 3;
  string source = 4;
  string message = 5;
  bytes context = 6;
  ErrorCode error_code = 7;
}

enum LogLevel {
  LOG_LEVEL_TRACE = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
  LOG_LEVEL_FATAL = 5;
}

message PerformanceMetrics {
  Timestamp timestamp = 1;
  double cpu_usage_percent = 2;
  uint64 memory_used_bytes = 3;
  uint64 memory_total_bytes = 4;
  double disk_read_mbps = 5;
  double disk_write_mbps = 6;
  double network_in_mbps = 7;
  double network_out_mbps = 8;
  uint32 num_threads = 9;
  uint32 num_processes = 10;
  double load_average_1m = 11;
  double load_average_5m = 12;
  double load_average_15m = 13;
}

message Benchmark {
  option (proto2ffi.pooled) = true;

  string name = 1;
  uint32 num_iterations = 2;
  Statistics duration_stats = 3;
  Statistics throughput_stats = 4;
  Statistics memory_stats = 5;
  repeated PerformanceMetrics samples = 6;
}
